<resources>
    <string name="app_name">CleanWater</string>
    <string name="not_found">Location still not found</string>

    <string name="dashboard_permission_denied">One of the Permission is still denied</string>
    <string name="err">Error</string>
    <string name="title_activity_login">Sign in</string>
    <string name="user_token">com.looper.andremachado.cleanwater.user_auth_token</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_update">Update</string>
    <string name="prompt_repeat_password">Repeat Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_logout">Logout</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Create an Account</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_name">This name contains some invalid characters</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_different_password">The passwords are not the same</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_register">Create an Account</string>

    <string name="action_settings">Settings</string>
    action_settings
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="error_invalid_email">This email address is invalid</string>
</resources>
